--- a/lawdb-frontend-react-bootstrap/src/styles/navbar.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/navbar.css
@@ -1,37 +1,23 @@
 /* navbar.css */
 .navbar {
   top: 0;
-  height: 75px;
+  height: auto;
   border-bottom: #3a086b 2px solid;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
   z-index: 1;
 }
 
-.navbar-toggler {
+/* .navbar-toggler {
   border: none;
-}
+  &:focus {
+    outline: none;
+    box-shadow: none;
+  }
+} */
 
-.navbar-toggler:focus {
-  outline: none;
-  box-shadow: none;
-}
-
-.isCollapsed,
-.isSearchResultsPage {
-  background-image: linear-gradient(to right, rgba(147, 58, 124, 0.5), rgba(40, 6, 73, 0.5));
-  transition: 0.1s ease-in-out;
-}
-
-.navbar-collapse {
-  background-color: #f6eff6;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+.navbar-nav {
   display: flex;
   align-items: center;
-  text-align: center;
-  transition: linear 0.1s;
 }
 
 .navbar-brand {
@@ -39,61 +25,9 @@
   font-size: 16px;
   font-weight: bold;
   color: #3a086b;
-}
-
-.nav-usr {
-    margin-left: auto;
-    padding-right: 15px;
-  }
-  
-.dropdown-menu {
-background-color: #f6eff6;
-border: 1px solid #6a498a;
-}
-
-.dropdown-item {
-color: #3a086b;
-}
-
-.dropdown-item:hover {
-background-color: #6a498a;
-color: #ffffff;
-}
-
-.usr-btn {
-  font-size: 16px;
-  font-weight: bold;
-  color: #3a086b;
-  background-color: transparent;
-  border: none;
-}
-
-.usr-btn:hover {
-  color: #000000;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
-}
-
-.user-icon {
-  margin-right: 15px;
-}
-
-.nav-btn {
-  font-size: 16px;
-  font-weight: bold;
-  color: #3a086b;
-  background-color: #ffffff;
-  border-color: #3a086b;
-}
-
-@media (max-width: 350px) {
-  .navbar-brand {
+  @media (max-width: 350px) {
     font-size: 12px;
   }
-}
-
-.nav-btn:hover {
-  background-color: #6a498a;
-  color: #ffffff;
 }
 
 .nav-link {
@@ -101,10 +35,46 @@ color: #ffffff;
   font-size: 16px;
   color: #3a086b;
   font-weight: bold;
-  padding-bottom: 30px;
+  &:hover {
+    color: #6a498a;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+  }
 }
 
-.nav-link:hover {
-  color: #6a498a;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+.dropdown-menu {
+  background-color: #f6eff6;
+  border: 1px solid #6a498a;
+}
+
+.dropdown-item {
+  color: #3a086b;
+  &:hover {
+    background-color: #6a498a;
+    color: #ffffff;
+  }
+}
+
+.usr-btn, .nav-btn {
+  font-size: 16px;
+  font-weight: bold;
+  color: #3a086b;
+  background-color: transparent;
+  border: none;
+  &:hover {
+    color: #000000;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+  }
+}
+
+.user-icon {
+  margin-right: 15px;
+}
+
+.nav-btn {
+  background-color: #ffffff;
+  border-color: #3a086b;
+  &:hover {
+    background-color: #6a498a;
+    color: #ffffff;
+  }
 }
