--- a/lawdb-frontend-react-bootstrap/src/styles/search.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/search.css
@@ -1,11 +1,5 @@
 /* search.css */
 
-.login-logo {
-  width: 75px;
-  height: 75px;
-  object-fit: contain;
-}
-
 .search-body {
   flex: 1;
   margin: 25vh 0;
